*vdrplugin-text2skin-0.0.7 (09 Juli 2004)

  21. June 2004; Christian Gmeiner <christian at visual-page dot de>
  version bump

*vdrplugin-text2skin-0.0.6 (21 June 2004)

  21. June 2004; Christian Gmeiner <christian at visual-page dot de>
  some fixes in the ebuild
  version bump

*vdrplugin-text2skin-0.0.2 (2004/06/10)
 version bump & demo skins added

*vdrplugin-text2skin-0.0.1 (2004/06/05)
 version bump

*vdrplugin-text2skin-0.0.1-rc4 (2004/03/01)
 initial version