@@ -5,9 +5,11 @@ MD5 1be199a5d444a1c896bb7d2d759b10a8 vdrplugin-text2skin-0.0.2.ebuild 3728
 MD5 f602099d58cc157519fcf5dc6161a352 vdrplugin-text2skin-0.0.4.ebuild 1766
 MD5 c821de6f77db9dbbd7cc18fcae685219 vdrplugin-text2skin-0.0.6.ebuild 1647
 MD5 c821de6f77db9dbbd7cc18fcae685219 vdrplugin-text2skin-0.0.7.ebuild 1647
+MD5 c821de6f77db9dbbd7cc18fcae685219 vdrplugin-text2skin-0.0.8.ebuild 1647
 MD5 7e5313249deb11341328a4e4218bbe3e files/digest-vdrplugin-text2skin-0.0.6 121
 MD5 fd9e484ad2aae9bec8534f83b82eb909 files/digest-vdrplugin-text2skin-0.0.1_rc4 184
 MD5 c1eb304d01e8ca588f9ef5ff58660df9 files/digest-vdrplugin-text2skin-0.0.1 180
 MD5 56f7618fba025233a24230ab4982621d files/digest-vdrplugin-text2skin-0.0.2 326
 MD5 da3cde4d356a6fccf4700454618b1f81 files/digest-vdrplugin-text2skin-0.0.4 121
 MD5 8e537f62297fb21e7f88a7a64b1f9672 files/digest-vdrplugin-text2skin-0.0.7 120
+MD5 615d790f4228cb52e5fb19d1843ef0f4 files/digest-vdrplugin-text2skin-0.0.8 120
