@@ -1,0 +1,2 @@
+MD5 12c9ebd6f2b5e0732b7d336ac24e8ac5 vdr-text2skin-0.0.8.tgz 49978
+MD5 caf73690e0832b3a81c85e7fb2fa3809 demo.tgz 360320
